--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,5 +24,5 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     //QsBase Add
-    implementation('com.github.qsmaxmin:QsBase:3.5.2')
+    implementation 'com.github.qsmaxmin:QsBase:3.5.2'
 }
