--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".view.activity.account.ModifyLoginPsdActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
             android:name=".view.activity.MainActivity"
             android:screenOrientation="portrait" />
     </application>
