--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,12 @@ dependencies {
     //QsBase Add
 //    implementation 'com.github.qsmaxmin:QsBase:3.5.2'
     implementation project(':appbase')
+
+
+    //权限
+    implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.3'
+
+    //RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
 }
