--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 往SDCard写入数据权限 -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!-- 相机权限:调用系统Camera App，我们压根不需要任何权限，但是这里用Camera API，就必须在manifest内声明使用权限，通常由以下三项 -->
     <uses-permission android:name="android.permission.CAMERA" />
