--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
     <!-- 获取网络状态 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
+    <!-- 在SDCard中创建与删除文件权限 -->
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+
 
     <application
         android:name=".GlobalApplication"
@@ -66,6 +69,10 @@
 
         <activity
             android:name=".view.activity.MainActivity"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".view.activity.image.CropImageActivity"
             android:screenOrientation="portrait" />
     </application>
 
