--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     //RxJava
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.2'
+
+    compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-21'
+    compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-21'
 }
