--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
 
     compile 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-21'
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-21'
+
+    implementation "com.android.support:cardview-v7:$rootProject.ext.supportVersion"
 }
