团队页面数据展示及跳转

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -95,6 +95,10 @@
             android:name=".view.activity.setting.ClickDetailedActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".view.activity.statistics.ClickedTrendActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
