--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -37,7 +37,7 @@ dependencies {
 
     implementation 'com.android.support:multidex:1.0.2'
 
-    api 'de.greenrobot:eventbus:2.4.0'
+    api 'org.greenrobot:eventbus:3.1.1'
 
     //Glide图片加载框架
     api 'com.github.bumptech.glide:glide:3.8.0'
