--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,10 +12,59 @@ android {
 
         multiDexEnabled true
     }
+
+    signingConfigs {
+        release {
+            if (project.hasProperty("STORE_FILE")) {
+                storeFile file(STORE_FILE)
+                storePassword STORE_PASSWORD
+                keyAlias KEY_ALIAS
+                keyPassword KEY_PASSWORD
+                v2SigningEnabled false
+            }
+        }
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
+    }
+
+    //输出文件格式
+    android.applicationVariants.all { variant ->
+        if (variant.buildType.name != "debug") {
+            variant.getPackageApplication().outputDirectory = new File(project.rootDir.absolutePath + "/apk")
+        }
+        variant.outputs.all {
+            outputFileName = "${variant.baseName.replace(variant.flavorName, variant.flavorName + "-v" + variant.versionName + "-" + releaseTime())}.apk"
+        }
+    }
+
+    flavorDimensions 'industry'
+
+    productFlavors {
+        myb {
+            dimension 'industry'
+//            manifestPlaceholders = [icon     : "@mipmap/ic_launcher_znt",
+//                                    label    : "@string/app_name",
+//                                    bg_splash: "@mipmap/bg_splash_znt"
+//            ]
+            applicationId "com.leqian.bao"
+            resValue "string", "app_name", "蚂蚁帮"
+            resValue "string", "app_slogen", "积小成大的移动平台"
         }
     }
 }
@@ -32,7 +81,6 @@ dependencies {
 //    implementation 'com.github.qsmaxmin:QsBase:3.5.2'
     implementation project(':appbase')
 
-
     //权限
     implementation 'com.tbruyelle.rxpermissions:rxpermissions:0.9.3'
 
@@ -44,4 +92,15 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-21'
 
     implementation "com.android.support:cardview-v7:$rootProject.ext.supportVersion"
+}
+
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+    google()
+}
+
+static def releaseTime() {
+    return new Date().format("yyyy-MM-dd-HH-mm-ss", TimeZone.getTimeZone("GMT+08:00"))
 }
