--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -99,6 +99,10 @@
             android:name=".view.activity.statistics.ClickedTrendActivity"
             android:screenOrientation="portrait" />
 
+        <activity
+            android:name=".view.activity.resource.MakeCoverActivity"
+            android:screenOrientation="portrait" />
+
     </application>
 
 </manifest>
