--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,10 +23,19 @@ android {
                 v2SigningEnabled false
             }
         }
+
     }
 
     buildTypes {
         release {
+            minifyEnabled true
+            zipAlignEnabled true
+            shrinkResources true
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+
+        debug {
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true
@@ -58,10 +67,9 @@ android {
     productFlavors {
         myb {
             dimension 'industry'
-//            manifestPlaceholders = [icon     : "@mipmap/ic_launcher_znt",
-//                                    label    : "@string/app_name",
-//                                    bg_splash: "@mipmap/bg_splash_znt"
-//            ]
+            manifestPlaceholders = [
+                    KEY_UMENG: "5cbfb996570df3d4c0000869",
+            ]
             applicationId "com.leqian.bao"
             resValue "string", "app_name", "蚂蚁帮"
             resValue "string", "app_slogen", "积小成大的赚钱平台"
@@ -92,6 +100,11 @@ dependencies {
     compile 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-21'
 
     implementation "com.android.support:cardview-v7:$rootProject.ext.supportVersion"
+
+    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:5.3.1'
+
+    implementation 'com.umeng.sdk:common:1.5.0'
+    implementation 'com.umeng.sdk:analytics:7.5.0'
 }
 
 repositories {
