--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 17
         targetSdkVersion 27
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
 
         multiDexEnabled true
     }
@@ -71,8 +71,8 @@ android {
                     KEY_UMENG: "5cbfb996570df3d4c0000869",
             ]
             applicationId "com.leqian.bao"
-            resValue "string", "app_name", "蚂蚁帮"
-            resValue "string", "app_slogen", "蚂蚁帮让赚钱更简单"
+            resValue "string", "app_name", "分享吧"
+            resValue "string", "app_slogen", "分析吧让赚钱更简单"
         }
     }
 }
